src/app/pages/subjects/subjects.scss
@import 'variables';
@import 'mixins';

.subjects-page {
    .container {
        display: flex;
        flex-flow: row wrap;
        height: 100%;
        margin: 0 auto;
        max-width: $boxed-width;
        padding: 0 1.5rem;
        width: 100%;

        @include phone {
            display: block;
        }
    }

    .container[data-html="page_description"] {
        padding: 6rem 1.5rem 9rem;

        @include desktop {
            text-align: center;
        }

        h2 {
            font-size: 4rem;
            font-weight: 600;
            width: 100%;
        }

        p {
            font-size: 1.8rem;

            @include desktop {
                margin-left: auto;
                margin-right: auto;
                width: 80%;
            }
        }
    }

    .feature-block {
        margin-top: 5rem;
        overflow: hidden;
        transition: opacity 0.2s;

        @include desktop {
            opacity: 1;
        }

        .container {
            @include tablet {
                display: block;
            }
        }

        h2 {
            flex: 1 0 100%;

            @include desktop {
                text-align: center;
            }
        }
    }

    .filter {
        padding: 0.2rem 0;

        &.sticky {
            position: fixed;
            top: 9rem;

            @include desktop {
                position: static;
            }
        }
    }

    .blurb {
        color: color(neutral-dark);
        flex: 1 28%;
        font-size: 1.6rem;

        @include desktop {
            text-align: center;
        }

        &:nth-child(3) {
            @include desktop {
                margin: 0 2rem;
            }
        }

        .title {
            font-weight: 600;

            @include desktop {
                text-align: center;
            }
        }
    }

    .books {
        background-color: lighten(color(neutral-lighter), 8%);
        padding: 8rem 0;
        position: relative;

        .book-category {
            flex: 1 1 auto;
            width: 100%;

            .subject {
                color: color(gray);
                font-size: 2.5rem;
                font-style: italic;
                font-weight: 300;
            }
        }

        .row {
            display: flex;
            flex-flow: row wrap;
            justify-content: flex-start;
            margin: 0 -1rem;
            width: calc(100% + 2rem);
        }

        .cover {
            cursor: pointer;
            flex: 0 100%;
            margin: 1rem;
            position: relative;

            @media (min-width: $boxed-width - 660) {
                flex-basis: calc(50% - 2rem);
            }

            @media (min-width: $boxed-width - 440) {
                flex-basis: calc(33.3% - 2rem);
            }

            @media (min-width: $boxed-width - 220) {
                flex-basis: calc(25% - 2rem);
            }

            @media (min-width: $boxed-width) {
                flex-basis: calc(20% - 2rem);
            }

            &.coming-soon::before {
                @include coming-soon;
            }

            img {
                width: 100%;
            }
        }

        @mixin get-this-is-visible() {
            height: auto;
            opacity: 1;
            overflow: initial;
            padding: 1.5rem;
            transform: translate3d(0, 0, 0);
            width: 110%;
            z-index: 1;
        }

        .details {
            background: color(neutral-lightest);
            box-shadow: 0 0.1rem 0.3rem 0.2rem rgba(94, 96, 98, 0.1);
            height: 0;
            left: -5%;
            opacity: 0;
            overflow: hidden;
            position: absolute;
            top: 95%;
            transform: translate3d(0, -1rem, 0);
            transition: opacity 0.2s, transform 0.2s;
            width: 0;

            &.open {
                @include get-this-is-visible;
            }

            &::before {
                border: 2rem solid;
                border-color: transparent transparent color(neutral-lightest);
                bottom: 100%;
                content: '';
                left: 50%;
                margin-left: -2rem;
                position: absolute;
            }

            .cta > .btn {
                font-size: 90%;
                font-variant: normal;
                font-weight: 400;
                text-transform: uppercase;
                white-space: nowrap;
                width: 100%;
            }

            .cta > .btn:hover,
            .cta > .btn:focus {
                background-color: darken(color(orange), 5%);
                transform: scale3d(1, 1, 1);
            }
        }

        .cover:hover .details {
            @include desktop {
                @include get-this-is-visible;
            }
        }
    }
}

